--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 <img src="images/Village.png" alt="Village Life">
 <p>It is a small village in a beautiful valley.</p>
 <p>Again a change.</p>
-<p>Again a change 2.</p>
+<p>Again a change Git.</p>
 </div>
 </body>
 </html>
